fix(mon-pix): correct hidden scrollbar
in evaluation shared results modal

--- a/mon-pix/app/styles/components/campaigns/assessment/results/evaluation-shared-results-modal.scss
+++ b/mon-pix/app/styles/components/campaigns/assessment/results/evaluation-shared-results-modal.scss
@@ -10,7 +10,7 @@
   left: 0;
   z-index: 1000;
   padding: 0;
-  overflow-y: hidden;
+  overflow: hidden;
   text-align: center; // Used to center horizontally the inline-block modal content
   // we inline the pix-neutral-800 value
   background-color: rgb(37 56 88 / 50%);
@@ -40,7 +40,7 @@
   width: 100%;
   height: 100%;
   padding: var(--pix-spacing-4x);
-  overflow: hidden;
+  overflow: auto;
   color: var(--pix-neutral-800);
   text-align: center;
   vertical-align: middle; // Centered vertically with the .evaluation-shared-results-modal__overlay::after which is 100% height
@@ -64,8 +64,6 @@
       width: initial;
       height: initial;
     }
-
-
   }
 
   &__title {
@@ -103,7 +101,7 @@
 
 @include breakpoints.device-is('tablet') {
   .evaluation-shared-results-modal {
-      padding: 48px 80px;
+    padding: 48px 80px;
 
     &__header {
       padding-top: 0;
